apps/media/droppedneedle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droppedneedle
  namespace: media
  labels:
    app: droppedneedle
    app.kubernetes.io/name: droppedneedle
    app.kubernetes.io/instance: droppedneedle
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: droppedneedle
  ports:
    - port: 8688
      targetPort: 8688
  type: ClusterIP
