apps/media/droppedneedle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: droppedneedle
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - droppedneedle.phoenyxlab.xyz
  rules:
    - host: droppedneedle.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: droppedneedle
                port:
                  number: 8688
